# Documentacion_Notas

./: .gitignore  Notas_Experiencias.md  README.md  onprogress--SSL_.md
Bash-scripts/: script_ffmpeg.sh
DataBases/: README.md  SQL_MySQL.md
Desarrollo_software/: 6.-MVC.md  Argumentos-vs-Parametros.md  Principios.md  S-O-L-I-D.md
Django/: README.md
Docker/: Docker.md
Documentacion_proyectos/: paginas.md
FFmpeg/: Metadata-audio_video_subs.md  README.md  cut_video.md  scaling.md  transformChapters.py  volume.md  yt-dlp.md
Git-Github/: 1.-Git.md  2.-Github.md  README.md  add_remote.md  branches.md  clonar_ramas.md  clonar_repos.md  commits.md  eliminar_commits.md  push_to_branch.md  renombrar_ramas.md  repositorios.md  rollback.md
HTML5/: Drag_Drop_API.md  Geolocaltion_API.md
Heroku/: Addons_Heroku.md  Comandos_Heroku.md  README.md  Variable_entorno_Heroku.md
Heroku_noup/: notas_rapidas_heroku.md
Java/: README.md
JavaScript/: Array_N_veces.md  Audio-JavaScript.md  JavaScript_moviles.md  Web_Workers.md  img-to-base64.md  querySelector_vs_getElementById.md
Linux/: CURL.md  Conflicto_paquetes.md  Grub.md  Grub2.md  Limitar_Frecuencia_CPU.md  (+4 more)
Python/ejercicios_socket/: README.md  pyproject.toml
Python/ejercicios_socket/fifo_server_client/: Client_FIFO.py  Server_FIFO.py  fifocontroller.py  filemanagerfifo.py  models.py  operations.py  samples.py
Python/ejercicios_socket/socket_chat/: ClientChat.py  ControllerChat.py  GuiClient.py  ServerChat.py  chatroom.py  models.py  run.py
Python/ejercicios_socket/socket_timenow/: Client.py  Server.py  run.py
(+205 files in other folders)
