[tool.poetry]
name = "ejercicios"
version = "0.1.0"
description = "Ejercicios FIFOs, sockets y Python."
authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
